# arcgis-oriented-imagery-dataset-from-360

./: .bumpversion.cfg  Makefile  README.md  environment.yml  environment_dev.yml  make.cmd  pyproject.toml
arcgis/: README.md  arcgis-oriented-imagery-dataset-from-360.aprx  arcgis_oriented_imagery.pyt
config/: config.ini
docsrc/: mkdocs.yml
docsrc/mkdocs/: api.md  index.md
notebooks/: notebook-template.ipynb
scripts/: config.ini  make_data.py  make_pyt_archive.py
src/arcgis_oriented_imagery/: __init__.py  __main__.py  _logging_utils.py  data.py  schema.py
testing/: test_arcgis_oriented_imagery.py
