[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcgis-oriented-imagery-dataset-from-360"
version = "0.1.0.dev2"
authors = [
  { name="Joel McCune (https://github.com/knu2xs)"},
]
description = "Streamline the process of ingesting Oriented Imagery from a 360 degree camera."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = {file = "LICENSE"}
dependencies = [
    "arcgis>=2.2.0",
    "pandas>=1.0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["arcgis_oriented_imagery"]
